yay we fixed merging issues/ div spacing

--- a/sass/Homepage.scss
+++ b/sass/Homepage.scss
@@ -7,8 +7,8 @@
 	background-color: #d5dae0;
 	padding: 0 80px;
 	padding-top: 20px;
-	margin-top: -20px;
 	border-radius: 20px;
+	z-index: -1;
 
 	h2{
 		text-align: center;
