--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,11 @@ img {
     max-height: 100%;
 }
 
+.top{
+    background-color: white;
+    padding-bottom: 80px;
+}
+
 #carousel-image-1,
 #carousel-image-2 {
     max-height: 500px;
@@ -30,7 +35,7 @@ img {
 
 .product-image {
 	margin-top: 20px;
-    	border-radius: 5px;
+    border-radius: 5px;
 
 }
 
